--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,5 +16,9 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0"
   }
 }
