--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,10 +1,15 @@
 plugins {
     id 'groovy'
+    id 'java'
     id 'application'
 }
 
 application {
     mainClass = 'App'
+}
+
+run {
+    standardInput = System.in
 }
 
 group = 'br.com.linketinder'
