--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.11.0'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
-    // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.3'
 
 }
 
